@@ -1,3 +1,7 @@
+2014-03-27 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: added News - sdcc 3.4.0 RC1 and RC2
+
 2013-06-16 Borut Razem <borutr@users.sourceforge.net>
 
 	* snap.php: mentioned Microsoft Windows - x86_64 official binary package
